# openad-service-molf

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  demo-script.py  install.sh  molformer-demo.ipynb  openad.cfg  pyproject.toml  requirements.txt
install/: 1_requirements.txt  2_requirements.txt  3_requirements.txt  README.md  all.txt  all_reqs.txt  install.sh  requirements.txt  torch_requirements.txt  working_latest.txt
molformer_inference/: call_property_services.py  generate_property_service_defs.py  molformer_implementation.py  properties__init__.py  serve.py  service.py
molformer_inference/common/: __init__.py  configuration.py  s3.py  s3old.py
molformer_inference/common/algorithms/: __init__.py  core.py  registry.py
molformer_inference/common/properties/: __init__.py  scorer.py  utils.py
molformer_inference/common/properties/crystals/: __init__.py  core.py
molformer_inference/common/properties/molecules/: __init__.py  core.py
molformer_inference/common/properties/proteins/: __init__.py  core.py  functions.py
molformer_inference/common/properties/scores/: core.py
molformer_inference/common/properties/tests/: test_properties.py  test_properties_scorer.py
molformer_inference/definitions/services/: property_service_defintion_molecules_molformer_classification.json  property_service_defintion_molecules_molformer_multitask_classification.json  property_service_defintion_molecules_molformer_regression.json
test_runs/: demo-script.py  molformer-demo.ipynb
