[tool.poetry]
name = "molformer_inference"
version = "0.1.0"
license="MIT"
description = "Openad_model_Service"
authors = ["Daniel Choi <choi@ibm.com>", "Phil Downey <Phil.Downey1@ibm.com>", "Brian Duenas <Brian.Duenas@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "setuptools-cpp", "torch"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
show-fixes = true

[tool.ruff.lint]
ignore = [
    "E722", # Do not use bare `except`
    "F401", # imported but unused
    "E402", # gt4sd top level submodule
]
