[tool.poetry]
name = "molformer_inference"
version = "0.1.0"
license="MIT"
description = "Openad_model_Service"
authors = ["Daniel Choi <choi@ibm.com>", "Phil Downey <Phil.Downey1@ibm.com>", "Brian Duenas <Brian.Duenas@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
openad-service-utils = {git = "https://github.com/acceleratedscience/openad_service_utils.git"}
gt4sd_molformer = {git = "https://github.com/brian316/gt4sd-molformer.git"}
pandas = "^2.2.2"
importlib-resources = "5.10.0"
PyYAML = "^6.0.1"
torch = { version = "2.0.1", source = "pytorch" }
torchvision = { version = "0.15.2", source = "pytorch" }
torchaudio = { version = "2.0.2", source = "pytorch" }
pytorch-lightning = "2.0.1"
scikit-learn = "^1.3.2"
regex = "^2024.5.15"
transformers = "^4.36.2"
debugpy = "^1.8.0"
rdkit-pypi = "^2021.9.4"
NumPy = "^1.26.4"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 120
target-version = "py310"
show-fixes = true

[tool.ruff.lint]
ignore = [
    "E722", # Do not use bare `except`
    "F401", # imported but unused
    "E402", # gt4sd top level submodule
]
